# nanoGPT

./: .gitignore  model.py  pyproject.toml  train.py
config/: train_pile.py
data/thepile/: prepare.py
